Add SVG icons for Node.js, React, and Next.js
- Added Node.js icon with a green fill.
- Added React icon with a blue fill.
- Added Next.js icon with a black fill.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@icons/*": ["./src/icons/*" ]
     }
   },
   "include": [
