--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "i18next": "^25.6.0",
+    "lucide": "^0.552.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-i18next": "^16.2.1"
+    "react-i18next": "^16.2.1",
+    "react-vertical-timeline-component": "^3.5.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
